--- a/projects/2/manifest.json
+++ b/projects/2/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Weather",
-  "short_name": "Weather",
+  "name": "Bus Tracker",
+  "short_name": "Bus Tracker",
   "icons": [{
     "src": "images/icons/icon-128x128.png",
       "sizes": "128x128",
