--- a/projects/4/manifest.json
+++ b/projects/4/manifest.json
@@ -3,7 +3,7 @@
   "name": "Morning App",
   "icons": [
     {
-      "src":"img/.png",
+      "src":"img/bts_wings.png",
       "sizes": "192x192",
       "type": "image/png"
     }
